# python-afsapi

./: .gitignore  README.md  async_tests.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-to-test-pypi.yaml  python-publish.yml  python.yml  yaml.yml
afsapi/: __init__.py  api.py  exceptions.py  models.py  throttler.py  utils.py
