[metadata]
name = afsapi
description = Asynchronous Implementation of the Frontier Silicon API
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zhelev/python-afsapi.git
author = Krasimir Zhelev
author_email = krasimir.zhelev@gmail.com
license = Apache License 2.0
license_file = LICENSE
classifiers = 
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    aiohttp>=3.3.2,<4
python_requires = >=3.7
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1

[aliases]
test=pytest
